--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,9 @@ dist.jar=${dist.dir}/JavaBillsCollectionProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Tomasz\\Documents\\NetBeansProjects\\jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jdatepicker-1.3.4.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
